# HappyView

./: .dockerignore  .env.example  .gitignore  .releaserc.json  .vercelignore  404.html  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docusaurus.config.ts  entrypoint.sh  index.html  mempalace.yaml  package-lock.json  package.json  sidebars.ts  sitemap.xml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-postgres.yml  docker.yml  docs.yml  merge-main-to-dev.yml  mirror.yml  release-sdk.yml  release.yml  test.yml
assets/css/: styles.18b9c377.css  styles.8b9e8df6.css
assets/js/: 009f1e98.42325810.js  009f1e98.4381c598.js  009f1e98.79c081e2.js  009f1e98.833b5436.js  0510ba17.e5e327f0.js  09c1314d.df6dc576.js  0a7e20de.0ed755f3.js  0eda1588.4f831c59.js  111eee19.94292821.js  111eee19.c36f8bff.js  111eee19.c47c9a7a.js  1203.4c8aeaab.js  121e86a6.4a23b8e6.js  121e86a6.7988cc8d.js  121e86a6.c22515bb.js  125.6690f5ff.js  1485.a2d3345d.js  156.c3e6c79e.js  1571.216fe5d3.js  165.4c5708a1.js  1741.e6304f1e.js  1746.afdbc2a0.js  17896441.0e3115cb.js  17896441.278c1b8c.js  1903.c19e32df.js  2130.6aca0963.js  2217.7fbe9dae.js  2237.02886161.js  224113b7.83e258f6.js  225.04246537.js  2264.ab183745.js  2279.14e9bbca.js  2291.742b3f1e.js  22dd74f7.132c49f2.js  22dd74f7.6d79a20e.js  22dd74f7.786d0f6d.js  22dd74f7.d275db6e.js  22dd74f7.e7d0ca31.js  2334.0d54c30f.js  23374ca6.0bc9e136.js  (+238 more)
docker/: Dockerfile.postgres  init-databases.sh
docs/: README.md  admin-api.md  plugins.md  quickstart.md
docs/getting-started/: authentication.md  configuration.md  dashboard.md  quickstart.md
docs/guides/: api-keys.md  backfill.md  database-setup.md  event-logs.md  index-hooks.md  labelers.md  lexicons.md  permissions.md  plugins.md  postgres-to-sqlite-migration.md  scripting.md
docs/reference/: admin-api.md  architecture.md  changelog.md  glossary.md  production-deployment.md  troubleshooting.md  xrpc-api.md
docs/tutorials/: statusphere.md
getting-started/authentication/: index.html
getting-started/configuration/: index.html
getting-started/dashboard/: index.html
getting-started/quickstart/: index.html
guides/api-keys/: index.html
guides/backfill/: index.html
guides/database-setup/: index.html
guides/developing-plugins/: index.html
guides/event-logs/: index.html
guides/index-hooks/: index.html
guides/labelers/: index.html
guides/lexicons/: index.html
guides/permissions/: index.html
guides/plugins/: index.html
guides/postgres-to-sqlite-migration/: index.html
guides/scripting/: index.html
guides/sqlite-to-postgres-migration/: index.html
migrations/: 20260214000000_create_lexicons.sql  20260216000000_create_backfill_jobs.sql  20260217000000_create_admins.sql  20260218000000_admin_did_auth.sql  20260219000000_create_network_lexicons.sql  20260221000000_merge_network_lexicons.sql  20260222000000_add_lexicon_script.sql  20260223000000_create_event_logs.sql  20260304000000_add_on_index_script.sql  20260304000001_create_dead_letter_hooks.sql  20260304000002_rename_on_index_script_to_index_hook.sql  20260314000001_create_user_permissions.sql  20260314000003_remove_network_lexicon_permissions.sql  20260314100001_create_labels.sql  20260316000000_create_rate_limits.sql  20260317000000_rate_limit_token_costs.sql
migrations/postgres/: 20260212000000_create_records.sql  20260213000000_add_created_at.sql  20260215000000_add_target_collection.sql  20260220000000_add_lexicon_action.sql  20260304000003_create_script_variables.sql  20260306000000_create_admin_api_keys.sql  20260312000000_create_record_refs.sql  20260314000000_rename_admins_to_users.sql  20260314000002_rename_api_keys_add_permissions.sql  20260314100000_create_labeler_subscriptions.sql  20260318000000_uuid_to_text.sql  20260319000000_create_oauth_tables.sql  20260319000001_plugin_tables.sql  20260320000000_create_instance_settings.sql  20260320100000_create_external_auth_state.sql  20260322000000_add_plugin_manifest.sql  20260325000000_text_to_timestamptz.sql  (+22 more)
plugins/steam/: Cargo.toml
plugins/steam/src/: lib.rs
scripts/: pre-commit
src/: admin.rs  aip.rs  backfill.rs  config.rs  db.rs  dns.rs  domain.rs  domain_middleware.rs  error.rs  event_log.rs  feature_flags.rs  feature_middleware.rs  http_retry.rs  jetstream.rs  labeler.rs  lexicon.rs  lib.rs  main.rs  profile.rs  proxy_config.rs  rate_limit.rs  record_handler.rs  record_refs.rs  repo.rs  resolve.rs  server.rs  tap.rs  xrpc.rs
tests/: admin_plugins_official.rs  dev_happyview.rs  dpop_auth.rs  e2e_admin.rs  e2e_api_clients.rs  e2e_base_path.rs  e2e_delegation.rs  e2e_domains.rs  e2e_feature_flags.rs  e2e_health.rs  e2e_labelers.rs  e2e_network_lexicons.rs  e2e_permissions.rs  e2e_proxy_config.rs  e2e_scripts.rs  e2e_settings.rs  e2e_xrpc.rs  lua_atproto_api.rs  lua_db_api.rs  lua_record_api.rs  plugin_executor.rs  plugin_integration.rs  plugin_logging.rs
web/: next.config.ts  package-lock.json  package.json
(+344 files in other folders)
