[package]
name = "happyview"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
axum = "0.8"
base64 = "0.22"
dashmap = "6"
dotenvy = "0.15"
hex = "0.4"
futures-util = "0.3"
jsonwebtoken = "9"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
p256 = { version = "0.13", features = ["pkcs8"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "any", "json", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
http-body-util = "0.1"
hickory-resolver = "0.25"
ipnet = "2"
mlua = { version = "0.11", features = ["lua54", "async", "serialize", "vendored", "send"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1.3"
webpki-roots = "0.26"
regex = "1.12.3"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3"
urlencoding = "2.1.3"
